# SemanticFastForward_JVCI_2018

./: CalculateSpeedupRates.m  Example.m  FrameSemanticValue.m  NaiveSemanticFrameSelector.m  README.md  SemanticCost.m  SemanticFastForward.m  SemanticSequenceLibrary.m  SemanticSequenceProducer.m  SemanticVideoSubSampler.m  SpeedupVideo.m
AcceleratedVideoStabilizer/: CMakeLists.txt  README.md  VideoStabilization.pro  experimentExample.xml
AcceleratedVideoStabilizer/definitions/: define.h  experiment_struct.h  experiments.h
AcceleratedVideoStabilizer/doc/: doc_config  doc_mainpage.md
AcceleratedVideoStabilizer/doc/html/: README_8md.html  VideoStabilizationQtDoc.qch  annotated.html  annotated_dup.js  classMessageHandler-members.html  classMessageHandler.html  classMessageHandler.js  classes.html  define_8h.html  define_8h.js  define_8h__dep__incl.map  define_8h__dep__incl.md5  define_8h_source.html  dir_000000_000001.html  dir_000000_000002.html  dir_000002_000000.html  dir_000002_000001.html  dir_000003_000000.html  dir_000003_000001.html  dir_000003_000002.html  dir_2bce6d959c893b1ebd07dd3debff4b1c.html  dir_2bce6d959c893b1ebd07dd3debff4b1c.js  dir_68267d1309a1af8e8297ef4c3efbcdba.html  dir_68267d1309a1af8e8297ef4c3efbcdba.js  dir_68267d1309a1af8e8297ef4c3efbcdba_dep.map  dir_68267d1309a1af8e8297ef4c3efbcdba_dep.md5  dir_7f57b1e41c5acd0e859ae5f3a2b075a9.html  dir_7f57b1e41c5acd0e859ae5f3a2b075a9.js  dir_7f57b1e41c5acd0e859ae5f3a2b075a9_dep.map  dir_bc1e4162ee83d3b96e351e029d62c4b5.html  dir_bc1e4162ee83d3b96e351e029d62c4b5.js  dir_bc1e4162ee83d3b96e351e029d62c4b5_dep.map  dir_bc1e4162ee83d3b96e351e029d62c4b5_dep.md5  doc__mainpage_8md.html  error__messages_8h.html  error__messages_8h.js  error__messages_8h__dep__incl.map  error__messages_8h__dep__incl.md5  error__messages_8h_source.html  execute__commands_8h.html  (+126 more)
AcceleratedVideoStabilizer/doc/latex/: annotated.tex  classMessageHandler.tex  define_8h.tex  define_8h__dep__incl.md5  dir_2bce6d959c893b1ebd07dd3debff4b1c.tex  dir_68267d1309a1af8e8297ef4c3efbcdba.tex  dir_7f57b1e41c5acd0e859ae5f3a2b075a9.tex  dir_7f57b1e41c5acd0e859ae5f3a2b075a9_dep.md5  dir_bc1e4162ee83d3b96e351e029d62c4b5.tex  doc__mainpage_8md.tex  error__messages_8h.tex  error__messages_8h__dep__incl.md5  execute__commands_8h.tex  execute__commands_8h__dep__incl.md5  execute__commands_8h__incl.md5  experiment__struct_8h.tex  experiments_8h.tex  (+48 more)
AcceleratedVideoStabilizer/executables/: execute_commands.h
AcceleratedVideoStabilizer/headers/: error_messages.h  file_operations.h  homography.h  image_reconstruction.h  line_and_point_operations.h  master_frames.h  message_handler.h  sequence_processing.h
AcceleratedVideoStabilizer/src/: file_operations.cpp  homography.cpp  image_reconstruction.cpp  line_and_point_operations.cpp  line_and_points_operations.cpp  main.cpp  master_frames.cpp  message_handler.cpp  sequence_processing.cpp
AcceleratedVideoStabilizer/txt/: Output_errors_description.txt  TODO.txt
(+99 files in other folders)
